# DeepNodal

./: .cifar10_wrn_0.sh.swp  .gitignore  ;  LICENSE.md  QUICKSTART.md  README.md  TODO.md  ]  math  operator  requirements.txt  setup.cfg  setup.py
deepnodal/: __init__.py  concepts.py  level.py  stack.py  stream.py  tf_extended.py
deepnodal/calls/: google_tensorflow.py
deepnodal/concepts/: function.py  leaf.py  stem.py  structure.py
deepnodal/examples/: mnist_softmax.py
deepnodal/functions/: plan.py  regimen.py  supervisor.py  trainer.py
deepnodal/helpers/: cifar.py  imager.py  mnist.py  scalers.py
deepnodal/python/: __init__.py
deepnodal/python/calls/: google_tensorflow.py  tf_extended.py
deepnodal/python/cloud/: __init__.py  gs.py
deepnodal/python/concepts/: function.py  leaf.py  mapping.py  master.py  slave.py  stem.py  structure.py
deepnodal/python/debug/: __init__.py  cifar_old.py  imager_old.py  mnist_old.py
deepnodal/python/devices/: __init__.py  gpu.py  gputemps.py
deepnodal/python/functions/: __init__.py  accumulator.py  hypervisor.py  metric.py  overseer.py  plan.py  recorder.py  regime.py  regimen.py  schedule.py  supervisor.py  trainer.py
deepnodal/structures/: chain.py  level.py  link.py  network.py  stack.py  stream.py
examples/: cifar10_mlp.py  cifar10_resnet20.py  cifar10_wide_resnet.py  cifar10_wrn.py  mnist_cnn.py  mnist_cnn_multigpu.py  mnist_lenet.py  mnist_lenet_multigpu.py  mnist_mlp.py  mnist_parallel.py  mnist_pmlp.py  mnist_rnn.py  mnist_sae.py  mnist_sigmoid.py  mnist_skip.py  mnist_softmax.py
(+23 files in other folders)
