[metadata]
name = deepnodal
version = UNVERSIONED
description = deepnodal
long_description = file: README.md
url = http://github.com/Bhumbra/DeepNodal
author = Bhumbra
author_email = bhumbra@gmail.com

[options]
packages = find:
include_package_data=True
install_requires =
  numpy
  scipy
  tensorflow-gpu
