[metadata]
name = deepnodal
version = UNVERSIONED
description = deepnodal
long_description = file: README.md
url = http://github.com/Bhumbra/DeepNodal
author = Bhumbra
author_email = bhumbra@gmail.com

[options]
packages = find:
include_package_data=True
install_requires =
  numpy
  scipy
  gast==0.2.2
  tensorflow-gpu==2.5.3
  google-cloud-storage
  google-api-python-client
